Finalize responsive header, active nav styles, cart drawer integration

--- a/src/components/layout/SideMenu.css
+++ b/src/components/layout/SideMenu.css
@@ -57,3 +57,13 @@
 .sideMenuLink:hover{
   opacity: 1;
 }
+.sideMenuLink.active {
+  border-left: 3px solid #fff;
+  padding-left: 8px;
+}
+/* Desktop: SideMenu completely disabled */
+@media (min-width: 992px) {
+  .sideMenuOverlay {
+    display: none !important;
+  }
+}
